--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -30,69 +30,66 @@ and Tricks.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Running an Ant target</b></td>
-    <td width="70%">You can double click on a target in the Ant view to run it
-      (equivalent to selecting the target and choosing the <b>Run</b> action
-      from the context menu).</td>
+    <td width="30%" valign="top" align="right"><b>Running an Ant target</b></td>
+    <td width="70%" valign="top" align="left">You can double click on a target
+      in the Ant view to run it (equivalent to selecting the target and choosing
+      the <b>Run</b> action from the context menu).</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Feature Tips and Tricks</b></td>
-    <td width="70%" valign="top">[Missing]</td>
+    <td width="30%" valign="top" align="right"><b>Feature Tips and Tricks</b></td>
+    <td width="70%" valign="top" align="left">[Missing]</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>User customizable<br>
+    <td width="30%" valign="top" align="right"><b>User customizable<br>
       key bindings</b></td>
-    <td width="70%">The preference (<b>Workbench / Keys</b>) for customizing key
-      bindings (one of our high priority items for Eclipse 2.1) has been
-      completely reworked.</td>
+    <td width="70%" valign="top" align="left">The preference (<b>Workbench /
+      Keys</b>) for customizing key bindings (one of our high priority items for
+      Eclipse 2.1) has been completely reworked.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Better UI for editor / view synchronization</b></td>
-    <td width="70%">The new <b>Navigate &gt; Show In</b> action provides a
-      uniform way to navigate from an open editor to a view showing the
-      corresponding file (e.g., in the resource Navigator view), or from a file
-      selected in one view to the same file in a different view (e.g., from the
-      resource Navigator view to the Java Packages Explorer view).</td>
+    <td width="30%" valign="top" align="right"><b>Better UI for editor / view
+      synchronization</b></td>
+    <td width="70%" valign="top" align="left">The new <b>Navigate &gt; Show In</b>
+      action provides a uniform way to navigate from an open editor to a view
+      showing the corresponding file (e.g., in the resource Navigator view), or
+      from a file selected in one view to the same file in a different view
+      (e.g., from the resource Navigator view to the Java Packages Explorer
+      view).</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>CVS Watch/Edit</b></td>
-    <td width="70%">The &quot;edit&quot; portion of CVS Watch/Edit is now
-      supported within Eclipse. Through settings on the <b>Team / CVS /
-      Watch/Edit</b> preference page (which must be set before the projects are
-      added to your workspace), you can choose to automatically notify the CVS
-      server whenever you start to edit a file. In turn, the CVS server will
-      notify others on the watch list for that file. When you go to edit a file,
-      you are warned if there are others editing the same file. <b>Team &gt;
-      Show Editors</b> on a file's context menu lists everyone currently working
-      on the file. There are also <b>Team &gt; Edit</b> and <b>Unedit</b>
+    <td width="30%" valign="top" align="right"><b>CVS Watch/Edit</b></td>
+    <td width="70%" valign="top" align="left">The &quot;edit&quot; portion of
+      CVS Watch/Edit is now supported within Eclipse. Through settings on the <b>Team
+      / CVS / Watch/Edit</b> preference page (which must be set before the
+      projects are added to your workspace), you can choose to automatically
+      notify the CVS server whenever you start to edit a file. In turn, the CVS
+      server will notify others on the watch list for that file. When you go to
+      edit a file, you are warned if there are others editing the same file. <b>Team
+      &gt; Show Editors</b> on a file's context menu lists everyone currently
+      working on the file. There are also <b>Team &gt; Edit</b> and <b>Unedit</b>
       actions.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Working set for imported team projects</b></td>
-    <td width="70%">There is now an option to create a working set for projects
-      imported into the workspace via <b>Import &gt; Team Project Set</b>. This
-      works for all types of repositories.
+    <td width="30%" valign="top" align="right"><b>Working set for imported team
+      projects</b></td>
+    <td width="70%" valign="top" align="left">There is now an option to create a
+      working set for projects imported into the workspace via <b>Import &gt;
+      Team Project Set</b>. This works for all types of repositories.
       <p><img border="0" src="images/team-project-set.gif" width="324" height="183"></p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Terminating Ant builds</b></td>
-    <td width="70%">The <b>Terminate</b> action in the console (or Debug view)
-      can be used to terminate an Ant build running in the background.</td>
+    <td width="30%" valign="top" align="right"><b>Terminating Ant builds</b></td>
+    <td width="70%" valign="top" align="left">The <b>Terminate</b> action in the
+      console (or Debug view) can be used to terminate an Ant build running in
+      the background.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Open editors using drag and drop</b></td>
-    <td width="70%" valign="top">You can now open an editor on an item by
-      dragging the item from a view like the Navigator or Package Explorer and
-      dropping it over the editor area.&nbsp;
+    <td width="30%" valign="top" align="right"><b>Open editors using drag and
+      drop</b></td>
+    <td width="70%" valign="top" align="left">You can now open an editor on an
+      item by dragging the item from a view like the Navigator or Package
+      Explorer and dropping it over the editor area.&nbsp;
       <p>Views can support this by providing a ResourceTransfer, a
       MarkerTransfer or an EditorInputTransfer in their drag source event
       handler. See the documentation for these classes under Platform Plug-in
@@ -100,23 +97,20 @@ and Tricks.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Go to last edit position</b></p>
-    </td>
-    <td width="70%" valign="top">Press Ctrl+Q (<b>Navigate &gt; Go to Last Edit
-      Position</b>) in any text-based editor to take you back to the place where
-      you last made a change. A button marked <img border="0" src="images/last_edit_pos.gif" alt="Go to last edit postion" width="16" height="16">
+    <td width="30%" valign="top" align="right"><b>Go to last edit position</b></td>
+    <td width="70%" valign="top" align="left">Press Ctrl+Q (<b>Navigate &gt; Go
+      to Last Edit Position</b>) in any text-based editor to take you back to
+      the place where you last made a change. A button marked <img border="0" src="images/last_edit_pos.gif" alt="Go to last edit postion" width="16" height="16">
       shows up in the toolbar when the <b>Editor Navigation</b> action set is
       enabled.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Ant output and hyperlinks</b></td>
-    <td width="70%" valign="top">The output from Ant builds is now written to
-      the <b>Console</b> view in the same hierarchical format seen when running
-      Ant from the command line. Ant tasks (for example &quot;[mkdir]&quot;) are
-      hyperlinked to the associated Ant build file, and javac error reports are
-      hyperlinked to the associated Java source file and line number.
+    <td width="30%" valign="top" align="right"><b>Ant output and hyperlinks</b></td>
+    <td width="70%" valign="top" align="left">The output from Ant builds is now
+      written to the <b>Console</b> view in the same hierarchical format seen
+      when running Ant from the command line. Ant tasks (for example &quot;[mkdir]&quot;)
+      are hyperlinked to the associated Ant build file, and javac error reports
+      are hyperlinked to the associated Java source file and line number.
       (Currently, error linking only works for errors reported by the Eclipse
       Java compiler; other javac error output formats will be added for M5).
       <p>The Console now supports hyperlinks for javac and jikes as well as the
@@ -125,12 +119,12 @@ and Tricks.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Help working sets</b></td>
-    <td width="70%" valign="top">Help working sets have replaced advanced search
-      filtering. Working sets are persisted from one Eclipse session to the
-      next, and can be used in workbench help searches or from the Help browser.
-      They allow narrowing searches down as far as a section of a book.
+    <td width="30%" valign="top" align="right"><b>Help working sets</b></td>
+    <td width="70%" valign="top" align="left">Help working sets have replaced
+      advanced search filtering. Working sets are persisted from one Eclipse
+      session to the next, and can be used in workbench help searches or from
+      the Help browser. They allow narrowing searches down as far as a section
+      of a book.
       <ul>
         <li>
           <p align="center"><img border="0" src="images/help-working-set.gif" align="left" width="435" height="321"></li>
@@ -138,98 +132,92 @@ and Tricks.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Improved workspace navigation</b></td>
-    <td width="70%" valign="top">Whenever the resource Navigator view is
-      visible, <b>Navigate &gt; Open Resource</b> (CTRL+SHIFT+R) brings up a
-      dialog that allow you to quickly locate and open an editor on any file in
-      the workspace. In the same vein, <b>Navigate &gt; Go To &gt; Resource</b>
-      expands and selects the resource in the Navigator view itself.</td>
+    <td width="30%" valign="top" align="right"><b>Improved workspace navigation</b></td>
+    <td width="70%" valign="top" align="left">Whenever the resource Navigator
+      view is visible, <b>Navigate &gt; Open Resource</b> (CTRL+SHIFT+R) brings
+      up a dialog that allow you to quickly locate and open an editor on any
+      file in the workspace. In the same vein, <b>Navigate &gt; Go To &gt;
+      Resource</b> expands and selects the resource in the Navigator view
+      itself.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Now where was I?</b></td>
-    <td width="70%" valign="top">Workbench editors now keep a navigation
-      history. If&nbsp; you open a second editor while you're editing away, you
-      can hit&nbsp; ALT+LeftArrow (Navigate &gt; Backward, or the back arrow on
-      the workbench toolbar) to get back. Working with lots of open editors just
-      got a whole lot easier.</td>
+    <td width="30%" valign="top" align="right"><b>Now where was I?</b></td>
+    <td width="70%" valign="top" align="left">Workbench editors now keep a
+      navigation history. If&nbsp; you open a second editor while you're editing
+      away, you can hit&nbsp; ALT+LeftArrow (Navigate &gt; Backward, or the back
+      arrow on the workbench toolbar) to get back. Working with lots of open
+      editors just got a whole lot easier.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Sort tasks by creation time</b></td>
-    <td width="70%" valign="top">Use <b>Sort &gt; by Creation Time</b> in the
-      view menu of the Tasks view to sort items in the Tasks view by the time
-      they were created .</td>
+    <td width="30%" valign="top" align="right"><b>Sort tasks by creation time</b></td>
+    <td width="70%" valign="top" align="left">Use <b>Sort &gt; by Creation Time</b>
+      in the view menu of the Tasks view to sort items in the Tasks view by the
+      time they were created .</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Calmer editor linking behavior</b></td>
-    <td width="70%" valign="top">The resource Navigator view is no longer
-      tightly linked to the currently open editor. Closing or switching editors
-      does not change the selection in the Navigator view. Use the <b>Sync with
-      Editor</b> button in the Navigator view toolbar to manually align the
+    <td width="30%" valign="top" align="right"><b>Calmer editor linking behavior</b></td>
+    <td width="70%" valign="top" align="left">The resource Navigator view is no
+      longer tightly linked to the currently open editor. Closing or switching
+      editors does not change the selection in the Navigator view. Use the <b>Sync
+      with Editor</b> button in the Navigator view toolbar to manually align the
       Navigator view to show the file being edited. (It's right beside the new <b>Collapse
       All</b> button.)</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Like to start afresh each session?</b></td>
-    <td width="70%" valign="top">There is a new preference (<b>Workbench /
-      Editors</b>) to automatically close all open editors before exiting
+    <td width="30%" valign="top" align="right"><b>Like to start afresh each
+      session?</b></td>
+    <td width="70%" valign="top" align="left">There is a new preference (<b>Workbench
+      / Editors</b>) to automatically close all open editors before exiting
       Eclipse.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Help bookmarks</b></td>
-    <td width="70%" valign="top">You can now keep your own list of bookmarks to
-      pages in help books. Create a bookmark with the new <b>Bookmark Document</b>
-      button on the toolbar of the Help browser. The bookmarks show up in the
-      new <b>Bookmarks</b> tab.</td>
+    <td width="30%" valign="top" align="right"><b>Help bookmarks</b></td>
+    <td width="70%" valign="top" align="left">You can now keep your own list of
+      bookmarks to pages in help books. Create a bookmark with the new <b>Bookmark
+      Document</b> button on the toolbar of the Help browser. The bookmarks show
+      up in the new <b>Bookmarks</b> tab.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Support for custom help browsers</b></td>
-    <td width="70%" valign="top">There is a new preference (<b>Workbench / Help</b>)
-      that allows you to configure a custom help browser.</td>
+    <td width="30%" valign="top" align="right"><b>Support for custom help
+      browsers</b></td>
+    <td width="70%" valign="top" align="left">There is a new preference (<b>Workbench
+      / Help</b>) that allows you to configure a custom help browser.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>CVS now supports working sets</b></td>
-    <td width="70%" valign="top">Users can now define working sets which will
-      limit the number of projects shown in the CVS Repositories view.</td>
+    <td width="30%" valign="top" align="right"><b>CVS now supports working sets</b></td>
+    <td width="70%" valign="top" align="left">Users can now define working sets
+      which will limit the number of projects shown in the CVS Repositories
+      view.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Comparing different versions</b></td>
-    <td width="70%" valign="top">Select any folder or file in the CVS
-      Repositories view and choose <b>Compare With</b> from context menu to
+    <td width="30%" valign="top" align="right"><b>Comparing different versions</b></td>
+    <td width="70%" valign="top" align="left">Select any folder or file in the
+      CVS Repositories view and choose <b>Compare With</b> from context menu to
       compare it against some other version.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Restoring deleted files from CVS</b></td>
-    <td width="70%" valign="top">Deleted files can now be queried and restored
-      from the CVS repository using the <b>Team &gt; Restore from Repository...</b>
-      command, which is available on CVS projects and folders.</td>
+    <td width="30%" valign="top" align="right"><b>Restoring deleted files from
+      CVS</b></td>
+    <td width="70%" valign="top" align="left">Deleted files can now be queried
+      and restored from the CVS repository using the <b>Team &gt; Restore from
+      Repository...</b> command, which is available on CVS projects and folders.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>CVS Quick Sync</b></td>
-    <td width="70%" valign="top">A new &quot;quick sync&quot; action has been
-      added to the CVS action set. The action lets you select which CVS projects
-      to synchronize. A new button shows up in the CVS repository view, but you
-      can customize your workbench toolbar to place it within easy reach.</td>
+    <td width="30%" valign="top" align="right"><b>CVS Quick Sync</b></td>
+    <td width="70%" valign="top" align="left">A new &quot;quick sync&quot;
+      action has been added to the CVS action set. The action lets you select
+      which CVS projects to synchronize. A new button shows up in the CVS
+      repository view, but you can customize your workbench toolbar to place it
+      within easy reach.</td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>More flexible CVS checkouts</b></td>
-    <td width="70%" valign="top">A new <b>Checkout Into</b> action lets you
-      check out a folder into an existing project. And a checked-out folder in a
-      project can be disconnected from CVS control so that it can be changed in
-      or deleted from a workspace without queuing up outgoing CVS changes. And
-      CVS projects can now be configured to not fetch absent directories on
-      update.</td>
+    <td width="30%" valign="top" align="right"><b>More flexible CVS checkouts</b></td>
+    <td width="70%" valign="top" align="left">A new <b>Checkout Into</b> action
+      lets you check out a folder into an existing project. And a checked-out
+      folder in a project can be disconnected from CVS control so that it can be
+      changed in or deleted from a workspace without queuing up outgoing CVS
+      changes. And CVS projects can now be configured to not fetch absent
+      directories on update.</td>
   </tr>
 </table>
 
