--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<h2>What's New for 2.1</h2>
+<h2>What's New in 2.1</h2>
 <p>[This section should make interesting reading for an end user of Eclipse 2.0
 who has just switched to 2.1 (or is contemplating switching). It should inform
 them the most interesting and most significant visible changes that came along
@@ -32,42 +32,38 @@ size throughout.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>User customizable<br>
+    <td width="30%" valign="top" align="right"><b>User customizable<br>
       key bindings</b></td>
-    <td width="70%">You can now customize key bindings using <b>Workbench / Keys</b>
-      preference page. Emacs users will find a predefined set of key bindings
-      awaiting them.
+    <td width="70%" valign="top" align="left">You can now customize key bindings
+      using <b>Workbench / Keys</b> preference page. Emacs users will find a
+      predefined set of key bindings awaiting them.
       <p><img border="0" src="images/key-bindings.gif" width="460" height="345"></p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Editor navigation history</b></td>
-    <td width="70%" valign="top">Workbench editors now keep a navigation
-      history. If you open a second editor while you're editing away, you can
-      use <b>Navigate &gt; Backward</b> to get back, or press the back button on
-      the workbench toolbar. The back button on your mouse also does the trick
-      as along as it sends the standard ALT+LeftArrow key sequence.
+    <td width="30%" valign="top" align="right"><b>Editor navigation history</b></td>
+    <td width="70%" valign="top" align="left">Workbench editors now keep a
+      navigation history. If you open a second editor while you're editing away,
+      you can use <b>Navigate &gt; Backward</b> to get back, or press the back
+      button on the workbench toolbar. The back button on your mouse also does
+      the trick as along as it sends the standard ALT+LeftArrow key sequence.
       <p align="center"><img border="0" src="images/navigate-back.gif" width="396" height="176"></p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Improved default text editor</b></td>
-    <td width="70%">The default text editor now supports line numbers,
-      cursor-line highlighting, print margin, annotation highlighting, and an
-      overview ruler. All of these can be configured from the <b>Workbench /
-      Editors / Text Editor</b> preference page.
+    <td width="30%" valign="top" align="right"><b>Improved default text editor</b></td>
+    <td width="70%" valign="top" align="left">The default text editor now
+      supports line numbers, cursor-line highlighting, print margin, annotation
+      highlighting, and an overview ruler. All of these can be configured from
+      the <b>Workbench / Editors / Text Editor</b> preference page.
       <p align="center"><img border="0" src="images/text-editor.gif" width="250" height="338"></p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Calmer editor linking behavior</b></td>
-    <td width="70%" valign="top">The resource Navigator view is no longer
-      tightly linked to the currently open editor by default. This means that
-      closing or switching editors does not change the selection in the
+    <td width="30%" valign="top" align="right"><b>Calmer editor linking behavior</b></td>
+    <td width="70%" valign="top" align="left">The resource Navigator view is no
+      longer tightly linked to the currently open editor by default. This means
+      that closing or switching editors does not change the selection in the
       Navigator view, which many found disorienting. Toggle the <b>Link with
       Editor</b> button in the Navigator view toolbar to tie the Navigator view
       to always show the current file being edited.
@@ -75,30 +71,30 @@ size throughout.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Better UI for editor / view synchronization</b></td>
-    <td width="70%">The new <b>Navigate &gt; Show In</b> action provides a
-      uniform way to navigate from an open editor to a view showing the
-      corresponding file (e.g., in the resource Navigator view), or from a file
-      selected in one view to the same file in a different view (e.g., from the
-      resource Navigator view to the Java Packages Explorer view).
+    <td width="30%" valign="top" align="right"><b>Better UI for editor / view
+      synchronization</b></td>
+    <td width="70%" valign="top" align="left">The new <b>Navigate &gt; Show In</b>
+      action provides a uniform way to navigate from an open editor to a view
+      showing the corresponding file (e.g., in the resource Navigator view), or
+      from a file selected in one view to the same file in a different view
+      (e.g., from the resource Navigator view to the Java Packages Explorer
+      view).
       <p align="center"><img border="0" src="images/show-in.gif" width="466" height="238"></p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>Improved Ant view</b></td>
-    <td width="70%">There is a new Ant View (<b>Window &gt; Show View &gt; Ant</b>)
-      that makes it easier to run Ant scripts. The Ant view has been completely
-      redesigned and streamlined to simplify running a single Ant target. The
-      view also includes a search button for finding Ant build files in the
-      workspace to add to the view.
+    <td width="30%" valign="top" align="right"><b>Improved Ant view</b></td>
+    <td width="70%" valign="top" align="left">There is a new Ant View (<b>Window
+      &gt; Show View &gt; Ant</b>) that makes it easier to run Ant scripts. The
+      Ant view has been completely redesigned and streamlined to simplify
+      running a single Ant target. The view also includes a search button for
+      finding Ant build files in the workspace to add to the view.
       <p align="center"><img border="0" src="images/ant-view.gif" width="353" height="329"></td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>External tools &amp; launch configurations</b></td>
-    <td width="70%" valign="top">
+    <td width="30%" valign="top" align="right"><b>External tools &amp; launch
+      configurations</b></td>
+    <td width="70%" valign="top" align="left">
       <p>External tools have been completely migrated to use launch
       configurations. The <b>Run &gt; External Tools</b> drop-down menu now
       appears and works in the same fashion as the run and debug drop-down
@@ -109,16 +105,15 @@ size throughout.]</p>
       <p align="center"><img border="0" src="images/ant-tabs.gif" width="474" height="574"></td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="left">
-      <p align="right"><b>More flexible project layouts</b></td>
-    <td width="70%" valign="top">There is now improved support for dealing with
-      externally imposed restrictions on how the files in a workspace project
-      are laid out in the local file system. When creating a folder (or file),
-      you can link it to an existing location in the file system outside of the
-      workspace. This is done using the Advanced section on the New Folder (and
-      New File) wizards. This is useful for integrating with external libraries
-      or source code directories that cannot readily be copied into an Eclipse
-      workspace.
+    <td width="30%" valign="top" align="right"><b>More flexible project layouts</b></td>
+    <td width="70%" valign="top" align="left">There is now improved support for
+      dealing with externally imposed restrictions on how the files in a
+      workspace project are laid out in the local file system. When creating a
+      folder (or file), you can link it to an existing location in the file
+      system outside of the workspace. This is done using the Advanced section
+      on the New Folder (and New File) wizards. This is useful for integrating
+      with external libraries or source code directories that cannot readily be
+      copied into an Eclipse workspace.
   </tr>
 </table>
 
