--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -646,6 +646,11 @@ simple bookkeeping tasks should be performed in <code>Plugin.startup</code>
 code. (<a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=12827">bugs 12827</a>,
 <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=5875">5875</a>, <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=16141">16141</a>)</p>
 <h3>3.1.2 <a name="I-Platform - Ant">Platform - Ant</a></h3>
+<h4>Xerces JARs no longer required on runtime Ant classpath</h4>
+<p>Explicitly adding the Xerces JARs to the runtime Ant classpath is no longer
+required and can cause problems. The Xerces classes are loaded from the
+org.apache.xerces plug-in provided with Eclipse. (bugs <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33664">33664</a>,
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33117">33117</a>)</p>
 <p>[TBD]</p>
 <h3>3.1.3 <a name="I-Platform - Help">Platform - Help</a></h3>
 <h4><font color="#00FF00">Help documents not displayed in a browser or very slow
