reorg programmer's guide

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api.htm
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../book.css">
 </head>
 <body>
-<h1> Using the JDT API</h1>
+<h1> JDT structure and API</h1>
 <p>Given that the JDT supplies a full featured Java IDE, why would you need to 
   use the JDT API?</p>
 <p>If you are building a plug-in that interacts with Java programs or resources 
