--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
@@ -10,7 +10,7 @@
 </HEAD>
 <BODY>
 <H2>
-Manipulating JDT Core options</H2>
+ JDT Core options</H2>
 <P>
 JDT Core options control the behavior of core features such as the Java
 compiler, code formatter, code assist, and other core behaviors.&nbsp; The APIs
