--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_preview_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_preview_manip.htm
@@ -11,7 +11,7 @@
 <h2>Manipulating code with a preview in a Java editor</h2>
 <p>The JDT Core plugin provides several mechanisms to programmatically create, 
   delete and modify Java elements. See <a href="jdt_api_manip.htm">manipulating 
-  Java code</a> for an introducation to the API provided by JDT Core. </p>
+  Java code</a> for an introduction to the API provided by JDT Core. </p>
 <p>In a UI world it is often useful to have the user confirm a preview before 
   changes are saved. This can be achieved by opening a Java editor on the compilation 
   unit to be modified. The user can then either save the Java editor's content 
