--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -13,11 +13,16 @@ Using the Java search engine</h2>
 for Java elements, such as method references, field declarations, implementors
 of an interface, etc. </p>
 <p>
-The entry point for Java search is the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html">SearchEngine</a></b> class. Factory methods on this class, such
-as <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(org.eclipse.jdt.core.IJavaElement, int)">createSearchPattern</a></b> (creates
-a search pattern) or <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createJavaSearchScope(org.eclipse.jdt.core.IJavaElement[])">createJavaSearchScope</a></b> 
-(creates a Java search scope) are used by the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#search(org.eclipse.core.resources.IWorkspace, org.eclipse.jdt.core.search.ISearchPattern, org.eclipse.jdt.core.search.IJavaSearchScope, org.eclipse.jdt.core.search.IJavaSearchResultCollector)">search</a></b>
-method. &nbsp;This method reports results to an  <b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html">IJavaSearchResultCollector</a></b> which you must implement. </p>
+The entry point for Java search is the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html">SearchEngine</a></b> class. You can search for particular
+patterns inside a Java element and scope the search to specific elements.&nbsp;
+Search patterns can be created using <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(org.eclipse.jdt.core.IJavaElement, int)">createSearchPattern</a></b>.&nbsp;
+A pattern is scoped using <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createJavaSearchScope(org.eclipse.jdt.core.IJavaElement[])">createJavaSearchScope</a></b>.&nbsp;
+Once a pattern and scope are defined, the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#search(org.eclipse.core.resources.IWorkspace, org.eclipse.jdt.core.search.ISearchPattern, org.eclipse.jdt.core.search.IJavaSearchScope, org.eclipse.jdt.core.search.IJavaSearchResultCollector)">search</a></b>
+ method is used to collect the results. </p>
+
+<p>
+Search results are reported to an  <b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html">IJavaSearchResultCollector</a></b> which you must
+implement in order to access the results. </p>
 
 <h3>
 Preparing for search</h3>
@@ -45,7 +50,7 @@ For example, creating a search pattern for searching for references to a given m
 Or creating a search pattern for searching for declarations of all types starting with "Obj":</p>
 <font color="#4444cc"><pre>
     // Create search pattern
-    ISearchPattern pattern = SearchEngine.createSearchPattern("Obj*", IJavaSearchConstants.TYPE, IJavaSearchConstants.DECLARATIONS, true);
+    ISearchPattern pattern = SearchEngine.createSearchPattern(&quot;Obj*&quot;, IJavaSearchConstants.TYPE, IJavaSearchConstants.DECLARATIONS, true);
 </pre></font>
 <p>
 The following search patterns are supported:
