--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_model.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_model.htm
@@ -8,11 +8,11 @@
 <link rel="stylesheet" type="text/css" href="../book.css">
 </head>
 <body>
-<h2> Java elements and resources</h2>
+<h2> Java model</h2>
 <p> The Java model is the set of classes that model the objects associated with 
   creating, editing, and building a Java program. The Java model classes are defined 
-  in the <b><a href="../reference/api/org/eclipse/jdt/core/package-summary.html"> 
-  org.eclipse.jdt.core.*</a> </b> packages. These classes implement Java specific 
+  in <b><a href="../reference/api/org/eclipse/jdt/core/package-summary.html"> 
+  org.eclipse.jdt.core</a></b>.&nbsp; These classes implement Java specific 
   behavior for resources and further decompose Java resources into model elements.</p>
 <h3> Java elements</h3>
 <p> The package <a href="../reference/api/org/eclipse/jdt/core/package-summary.html"><b> 
@@ -20,7 +20,7 @@
   compose a Java program. The JDT uses an in-memory object model to represent 
   the structure of a Java program. This model is hierarchical. Elements of a program 
   can be decomposed into child elements.</p>
-<p> Java elements are a similar resource objects.&nbsp; When you work with a Java 
+<p> Manipulating Java elements is similar to manipulating resource objects.&nbsp; When you work with a Java 
   element, you are actually working with a <b>handle</b> to some underlying model 
   object.&nbsp; You must use the <b>exists()</b> protocol to determine whether 
   the element is actually present in the workspace.&nbsp;</p>
@@ -124,7 +124,7 @@
 <p><img border="0" src="images/openables.gif" alt="Packages View showing elements implementing the IOpenable interface"> 
 </p>
 <p>The Java elements that implement <b><a href="../reference/api/org/eclipse/jdt/core/IOpenable.html"> 
-  IOpenable</a> </b> are mainly created from information found in the underlying 
+  IOpenable</a> </b> are created primarily from information found in the underlying 
   resource files.&nbsp; The same elements are represented generically in the resource 
   navigator view.</p>
 <p><img border="0" src="images/javanavigator.gif" alt="Resource Navigator showing elements implementing the IOpenable interface"> 
@@ -134,7 +134,7 @@
   the source elements in the compilation unit.</p>
 <img border="0" src="images/sourceelements.gif" alt="An editor and a content outliner illustrating the relation between corresponding source elements"> 
 <p> These elements implement the <a href="../reference/api/org/eclipse/jdt/core/ISourceReference.html"><b> 
-  ISourceReference</b></a> interface, since they contain corresponding source 
+  ISourceReference</b></a> interface, since they can provide corresponding source 
   code. (As these elements are selected in the content outliner, their corresponding 
   source code is shown in the Java editor).</p>
 <h3> Java elements and their resources</h3>
