--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
@@ -8,10 +8,11 @@
 <link rel="stylesheet" type="text/css" href="../book.css">
 </head>
 <body>
-<h2>JDT user interface</h2>
-<p> The <b> org.eclipse.jdt.ui</b> plug-in implements the Java specific user interface 
-  classes that manipulate Java elements. The following roadmap outlines the major 
-  functions in the <b>org.eclipse.jdt.ui </b> package and its subpackages.</p>
+<h2>JDT UI</h2>
+<p>JDT UI (<b>org.eclipse.jdt.ui</b>) is the plug-in implements the Java specific user interface 
+  classes that manipulate Java elements. The packages in the JDT UI implement
+the Java-specific extensions to the workbench.&nbsp;&nbsp;&nbsp; The JDT UI
+packages include:</p>
 <ul>
   <li>
     <p>
