--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -35,6 +35,318 @@ through M5 &quot;New and Noteworthy&quot; bulletins.]</p>
       <p align="center"><img border="0" src="images/code-assist.gif" width="451" height="262"></p>
     </td>
   </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Reminders in your Java code</b></td>
+    <td width="70%" valign="top" align="left">When you tag a comment in Java
+      source code with &quot;TODO&quot; the Java compiler automatically creates
+      a corresponding task as a visible reminder. Opening the task navigates you
+      back to your that place in the code. Use the <b>Java / Task Tags </b>preference
+      page to configure any other special tags (like &quot;FIXME&quot;) that
+      you'd like to be reminded of.
+      <p align="center"><img border="0" src="images/todo-example.gif" width="425" height="306"></td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Prominent status indication</b></td>
+    <td width="70%" valign="top" align="left">Both the Default Text editor and
+      the Java editor now display a prominent large spot in the upper right
+      corner to indicate that the file contains errors or warnings.
+      <p align="center"><img border="0" src="images/editor-error-indicator.gif" width="429" height="130"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Building Java project cycles</b></td>
+    <td width="70%" valign="top" align="left">Java projects that depend on each
+      other can usually be compiled successfully in a single build action.
+      However, in order for cycles to be allowed, you must to lower the severity
+      associated with circular dependencies on the <b>Java / Compiler</b>
+      preference page.
+      <p><img border="0" src="images/cycle-warning.gif" width="424" height="332"></td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Move instance method
+      refactoring</b></td>
+    <td width="70%" valign="top" align="left">You can select an instance method
+      and select <b>Move</b> from the context menu. It allows you to move the
+      method to the declared class of one of the method's parameters, or to the
+      declared class of a field. This creates a new method and converts the old
+      method into a delegate (passing it 'this' if necessary).
+      <p align="center"><img border="0" src="images/move-method.gif" width="323" height="331"></td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Pull Up refactoring</b></td>
+    <td width="70%" valign="top" align="left">
+      <p>Pull Up refactoring is more powerful now. Additional functionality
+      includes:</p>
+      <ul>
+        <li>Members can be pulled up more than 1 level in the class hierarchy.</li>
+        <li>Instead of pulling methods up you can choose to declare them
+          abstract in the destination class. This will add method stubs to all
+          non-abstract subclasses of the destination class if required.</li>
+        <li>By pressing <b>Add Required</b> you can compute the set of all
+          members that are required to be pulled up together with those already
+          selected.</li>
+      </ul>
+      <p align="center"><img border="0" src="images/pull-up.gif" width="439" height="314"></td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Push Down refactoring</b></td>
+    <td width="70%" valign="top" align="left">
+      <p>Select a set of non-static methods and fields declared in a class and
+      choose <b>Refactor &gt; Push Down</b>. For each of the methods and fields
+      you can then choose if you want to either:</p>
+      <ul>
+        <li>push it down to subclasses, or</li>
+        <li>(in the case of methods) push it down to subclasses and declare an
+          abstract method in the class that currently declares the method, or</li>
+        <li>leave it as is</li>
+      </ul>
+      <p align="center"><img border="0" src="images/push-down.gif" width="412" height="236"></td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Non-shared project filter for
+      Package Explorer and Project views</b></td>
+    <td width="70%" valign="top" align="left">There is a new filter for
+      excluding non-shared projects from Package Explorer and Projects view:
+      <p align="center"><img border="0" src="images/non-shared-project-filter.gif" width="380" height="465"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Find in file</b></td>
+    <td width="70%" valign="top" align="left">The Search menu group contains a
+      new command to search for all occurrences of types, fields, methods and
+      local variables inside the compilation unit or class file declared the
+      element. Consistent with other search commands, markers are generated and
+      presented as annotations in the editor. Entries in the Search Results view
+      have different icons for read and write access. For example, the search
+      results for &quot;fName&quot; in &quot;TestCase.java&quot; look like:.
+      <p align="center"><img border="0" src="images/search.gif" width="346" height="393"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Special end character for
+      patterns in Open and Go To dialogs</b></td>
+    <td width="70%" valign="top" align="left">The various <b>Open</b> and <b>Go
+      To</b> dialogs now support the end character '&lt;'. So if you want to see
+      all types in the <b>Open Type</b> dialog that end with &quot;Test&quot;
+      you have to enter the pattern &quot;*Test&lt;&quot;. If '&lt;' is not
+      present in the pattern, a '*' is appended to the pattern. So entering
+      &quot;*Test&quot; in the <b>Open Type</b> dialog shows all types
+      containing &quot;Test&quot; somewhere in the type name.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Multiple method restore</b></td>
+    <td width="70%" valign="top" align="left">You can now restore multiple Java
+      elements from the local history in one operation by selecting <b>Restore
+      From Local History</b> from the context menu. In the left pane of the
+      dialog, check the elements you want to restore and for each checked
+      element select a history entry from the right hand side.
+      <p align="center"><img border="0" src="images/multiple-restore.gif" width="457" height="279"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Type hierarchy view supports
+      grouping by defining type</b></td>
+    <td width="70%" valign="top" align="left">The type hierarchy method view
+      lets you sort the selected type's methods by their defining type. For
+      example, for AbstractList you can see that it contains method that were
+      defined in Object, Collection, and List:
+      <p align="center"><img border="0" src="images/sort-by-def.gif" width="466" height="351"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Improved prefix and suffix
+      configuration for variables</b></td>
+    <td width="70%" valign="top" align="left">In addition to configuring the
+      prefix or suffix for fields, you can now also specify the prefix or suffix
+      for static fields, parameters, and local variables. These settings on the <b>Java
+      / Code Generation</b> preference page are used in code assist, quick fix,
+      and refactoring whenever a variable name needs to be computed.
+      <p align="center"><img border="0" src="images/name-conventions.gif" width="404" height="159"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Customizable code generation</b></td>
+    <td width="70%" valign="top" align="left">The <b>Java / Code Generation</b>
+      preference page now allows you to customize generated code and comments in
+      a similar way that normal templates are defined. These code templates are
+      used whenever code is generated. (The comments replace the existing 'filecomment'
+      and 'typecomment' templates used for code generation.)
+      <p align="center"><img border="0" src="images/code-templates.gif" width="454" height="250"></td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Add Delegate Methods wizard</b></td>
+    <td width="70%" valign="top" align="left">Similar to the <b>Create
+      Getter/Setter</b> wizard, you can now easily generate delegate methods
+      (methods that delegate to a method provided by an instance
+      variable).&nbsp; The action is available on all types with fields.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Sort members</b></td>
+    <td width="70%" valign="top" align="left">There is now a <b>Sort Members</b>
+      action on the context menu of Java compilation units and top level types
+      that rearranges the members of a compilation unit according to the
+      category order defined in the <b>Java / Appearance / Member Sort Order</b>
+      preference page.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>More Quick Fixes and Quick
+      Assists</b></td>
+    <td width="70%" valign="top" align="left">
+      <ul>
+        <li>Create missing constructors.</li>
+        <li>Remove unused private methods/fields or types.</li>
+        <li>Fix ambiguous imports.</li>
+        <li>Suggestion to organize imports.</li>
+        <li>Create method in outer type (for methods in anonymous classes).</li>
+        <li>Remove if/while/for/do statement or block and correctly indent the
+          content.</li>
+        <li>Quick assist offers surround-with templates when called on a
+          multi-line selection.</li>
+      </ul>
+      <p><b>Note:</b> For existing workspaces, you may need to reset the
+      templates back to their default values.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Compiler flags unused private
+      members</b></td>
+    <td width="70%" valign="top" align="left">The Java compiler can now warn of
+      private method, field, or type declarations which aren't used. The setting
+      is on the <b>Java / Compiler</b> preference page.
+      <p><img border="0" src="images/warn-privates.gif" width="327" height="349"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>JUnit</b></td>
+    <td width="70%" valign="top" align="left">Select a JUnit test method in a
+      view and choose <b>Run &gt; Run As &gt; JUnit test</b>. This creates a
+      launch configuration to run the selected test.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Controlling your console</b></td>
+    <td width="70%" valign="top" align="left">Output displayed in the console
+      can be locked to a specific process via a drop-down menu in the Console
+      view toolbar. There's also a new scroll lock button that stops the console
+      from automatically scrolling as new output is appended.
+      <p><img border="0" src="images/selective-output.gif" width="459" height="140"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>New ways to create watch items</b></td>
+    <td width="70%" valign="top" align="left">The Java debugger can now create
+      watch items from the Java editor by selecting an expression and using the <b>Watch</b>
+      action (available in the context menu, and in the <b>Run</b> menu). As
+      well, a watch item can be created by selecting a variable and using the <b>Watch</b>
+      action.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Improved conditional
+      breakpoints</b></td>
+    <td width="70%" valign="top" align="left">A traditional conditional
+      breakpoint is triggered by a boolean expression evaluating to
+      &quot;true&quot;. It is now possible to declare conditional breakpoints
+      that are triggered whenever the value of an expression changes.
+      <p><img border="0" src="images/conditional-breakpoint.gif" width="232" height="176"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Step filters</b></td>
+    <td width="70%" valign="top" align="left">Step filters are more convenient
+      to use now that a <b>Step With Filters</b> action has been added to the
+      debug toolbar and menu. As well, actions have been added to the debug
+      context menu to streamline the creation of step filters for the type or
+      package associated with the selected stack frame.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Editing launch configurations</b></td>
+    <td width="70%" valign="top" align="left">Holding down the Control key and
+      making a selection from the <b>Run</b> or <b>Debug</b> drop-down menu
+      opens the associated launch configuration for editing. The launch
+      configuration can also be opened from the context menu associated with any
+      item in the Debug view.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Word wrap in<br>
+      Variables view</b></td>
+    <td width="70%" valign="top" align="left">The details area of the debugger's
+      <b>Variables</b> and <b>Expressions</b> views now supports word wrap,
+      available from the view drop-down menu.
+      <p><img border="0" src="images/expressions-details-pane.gif" width="338" height="179"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Hierarchical vs. flat layout
+      of packages</b></td>
+    <td width="70%" valign="top" align="left">An option on the Java Packages
+      (and Package Explorer) view allows you to change the way packages are
+      displayed. <b>Hierarchical</b> displays packages in a tree, with
+      subpackages below packages; <b>Flat</b> displays them as the traditional
+      way, as a flat list where all packages and subpackages as siblings.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Logical packages</b></td>
+    <td width="70%" valign="top" align="left">The Java Packages view (Java
+      Browsing perspective) coalesces packages of the same name across source
+      folders within a project. This presents a view of a logical package.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>In-place outlines</b></td>
+    <td width="70%" valign="top" align="left">Press Ctrl+F3 (<b>Navigate&nbsp;
+      &gt; Open Structure</b>) in the Java editor to pop up an in-place outline
+      of the element at the current cursor position. Or press Ctrl+O (<b>Edit
+      &gt; Open Structure</b>) to pop up an in-place outline of the current
+      source file.
+      <p align="center"><img border="0" src="images/inplace_outline.gif" alt="Inplace Outline" width="365" height="291"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Hover information in editor
+      overview</b></td>
+    <td width="70%" valign="top" align="left">The Java editor's right hand side
+      overview ruler now shows hover information for problem annotations.
+      <p align="center"><img border="0" src="images/overview_hover.gif" alt="Overview hover" width="435" height="150"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Quick assist</b></td>
+    <td width="70%" valign="top" align="left">Position the cursor in an
+      identifier and press Ctrl+1 (<b>Edit &gt; Quick Fix</b>) in the Java
+      editor to invoke the quick fix mechanism even when there are no errors.
+      <ul>
+        <li>Linked rename: Available on all identifiers. Switches into the
+          editor linked mode editing (like templates), where changing the
+          identifier changes all occurrences of that name within the source
+          file.</li>
+        <li>Move catch block to throws declaration: Available on the catch
+          statement.</li>
+        <li>Assign expression statements to a local variable or field: Available
+          on all expression statements. e.g.:&nbsp;</li>
+        <tt>&nbsp;&nbsp; vector.iterator();</tt><br>
+        will be transformed to<br>
+        <tt>&nbsp;&nbsp; Iterator iterator= vector.iterator();</tt><br>
+        Quick assist will guess a variable name for you.
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Stack trace hyperlinks</b></td>
+    <td width="70%" valign="top" align="left">Java stack traces in the console
+      now appear with hyperlinks. When you place the mouse over a line in a
+      stack trace, the pointer changes to the hand and the stack trace is
+      underlined. Pressing the mouse button opens the associated Java source
+      file and positions the cursor at the corresponding line.
+      <p align="center"><img border="0" src="images/stack-trace-hyperlink.gif" width="416" height="133"></p>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Refactoring can update
+      non-Java files</b></td>
+    <td width="70%" valign="top" align="left">When renaming a Java type or
+      package (or when moving a type to a different package), the fully
+      qualified name of the element can now be updated in non-Java files as
+      well.
+      <p align="center"><img border="0" src="images/refactor.gif" width="450" height="330"></p>
+    </td>
+  </tr>
 </table>
 
 </body>
